src/jsc/FFI.zig

// This is zig translate-c run on ffi.h
// it turns out: FFI.h is faster than our implementation that calls into C++ bindings
// so we just use this in some cases
pub const @"bool" = bool;
pub const JSCell = ?*anyopaque;
const struct_unnamed_1 = extern struct {
    payload: i32,
    tag: i32,
};
pub const union_EncodedJSValue = extern union {
    asInt64: i64,
    ptr: [*c]JSCell,
    asBits: struct_unnamed_1,
    asPtr: ?*anyopaque,
    asDouble: f64,
    asJSValue: jsc.JSValue,
};
pub const EncodedJSValue = union_EncodedJSValue;
pub export var ValueUndefined: EncodedJSValue = EncodedJSValue{
    .asInt64 = @as(i64, @bitCast(@as(c_longlong, @as(c_int, 2) | @as(c_int, 8)))),
};
pub const TrueI64 = @as(i64, @bitCast(@as(c_longlong, (@as(c_int, 2) | @as(c_int, 4)) | @as(c_int, 1))));
pub export var ValueTrue: EncodedJSValue = EncodedJSValue{
    .asInt64 = TrueI64,
};
pub const JSContext = ?*anyopaque;
pub inline fn JSVALUE_IS_CELL(arg_val: EncodedJSValue) bool {
    const val = arg_val;
    return !(((@as(c_ulonglong, @bitCast(val.asInt64)) & @as(c_ulonglong, 18446181123756130304)) | @as(c_ulonglong, @bitCast(@as(c_longlong, @as(c_int, 2))))) != 0);
}
pub inline fn JSVALUE_IS_INT32(arg_val: EncodedJSValue) @"bool" {
    const val = arg_val;
    return (@as(c_ulonglong, @bitCast(val.asInt64)) & @as(c_ulonglong, 18446181123756130304)) == @as(c_ulonglong, 18446181123756130304);
}
pub inline fn JSVALUE_IS_NUMBER(arg_val: EncodedJSValue) @"bool" {
    const val = arg_val;
    return (@as(c_ulonglong, @bitCast(val.asInt64)) & @as(c_ulonglong, 18446181123756130304)) != 0;
}
pub inline fn JSVALUE_TO_UINT64(arg_value: EncodedJSValue) u64 {
    const value = arg_value;
    if (JSVALUE_IS_INT32(value)) {
        return @as(u64, @bitCast(@as(c_longlong, JSVALUE_TO_INT32(value))));
    }
    if (JSVALUE_IS_NUMBER(value)) {
        return @as(u64, @intFromFloat(JSVALUE_TO_DOUBLE(value)));
    }
    return JSVALUE_TO_UINT64_SLOW(value);
}
pub inline fn JSVALUE_TO_INT64(arg_value: EncodedJSValue) i64 {
    const value = arg_value;
    if (JSVALUE_IS_INT32(value)) {
        return @as(i64, @bitCast(@as(c_longlong, JSVALUE_TO_INT32(value))));
    }
    if (JSVALUE_IS_NUMBER(value)) {
        return @as(i64, @intFromFloat(JSVALUE_TO_DOUBLE(value)));
    }
    return JSVALUE_TO_INT64_SLOW(value);
}
pub extern fn JSVALUE_TO_UINT64_SLOW(value: EncodedJSValue) u64;
pub extern fn JSVALUE_TO_INT64_SLOW(value: EncodedJSValue) i64;
pub const UINT64_TO_JSVALUE_SLOW = jsc.JSValue.fromUInt64NoTruncate;
pub const INT64_TO_JSVALUE_SLOW = jsc.JSValue.fromInt64NoTruncate;
pub inline fn UINT64_TO_JSVALUE(arg_globalObject: ?*anyopaque, arg_val: u64) EncodedJSValue {
    const globalObject = arg_globalObject;
    const val = arg_val;
    if (val < @as(c_ulonglong, @bitCast(@as(c_longlong, @as(c_long, 2147483648))))) {
        return INT32_TO_JSVALUE(@as(i32, @bitCast(@as(c_uint, @truncate(val)))));
    }
    if (val < @as(c_ulonglong, @bitCast(@as(c_longlong, @as(c_long, 9007199254740991))))) {
        return DOUBLE_TO_JSVALUE(@as(f64, @floatFromInt(val)));
    }
    return UINT64_TO_JSVALUE_SLOW(@as(*jsc.JSGlobalObject, @ptrCast(globalObject.?)), val).asEncoded();
}
pub inline fn INT64_TO_JSVALUE(arg_globalObject: ?*anyopaque, arg_val: i64) EncodedJSValue {
    const globalObject = arg_globalObject;
    const val = arg_val;
    if ((val >= @as(c_longlong, @bitCast(@as(c_longlong, -@as(c_long, 2147483648))))) and (val <= @as(c_longlong, @bitCast(@as(c_longlong, @as(c_long, 2147483648)))))) {
        return INT32_TO_JSVALUE(@as(i32, @bitCast(@as(c_int, @truncate(val)))));
    }
    if ((val >= @as(c_longlong, @bitCast(@as(c_longlong, -@as(c_long, 9007199254740991))))) and (val <= @as(c_longlong, @bitCast(@as(c_longlong, @as(c_long, 9007199254740991)))))) {
        return DOUBLE_TO_JSVALUE(@as(f64, @floatFromInt(val)));
    }
    return INT64_TO_JSVALUE_SLOW(@as(*jsc.JSGlobalObject, @ptrCast(globalObject.?)), val).asEncoded();
}
pub inline fn INT32_TO_JSVALUE(arg_val: i32) EncodedJSValue {
    return .{ .asInt64 = @as(i64, @bitCast(@as(c_ulonglong, 18446181123756130304) | @as(c_ulonglong, @bitCast(@as(c_ulonglong, @as(u32, @bitCast(arg_val))))))) };
}
pub inline fn DOUBLE_TO_JSVALUE(arg_val: f64) EncodedJSValue {
    var res: EncodedJSValue = .{ .asDouble = arg_val };
    res.asInt64 += @as(c_longlong, 1) << @as(@import("std").math.Log2Int(c_longlong), @intCast(49));
    return res;
}
pub inline fn FLOAT_TO_JSVALUE(arg_val: f32) EncodedJSValue {
    const val = arg_val;
    return DOUBLE_TO_JSVALUE(@as(f64, @floatCast(val)));
}
pub inline fn BOOLEAN_TO_JSVALUE(arg_val: @"bool") EncodedJSValue {
    const val = arg_val;
    var res: EncodedJSValue = undefined;
    res.asInt64 = @as(i64, @bitCast(@as(c_longlong, if (@as(c_int, @intFromBool(val)) != 0) (@as(c_int, 2) | @as(c_int, 4)) | @as(c_int, 1) else (@as(c_int, 2) | @as(c_int, 4)) | @as(c_int, 0))));
    return res;
}
pub inline fn JSVALUE_TO_INT32(arg_val: EncodedJSValue) i32 {
    const val = arg_val;
    return @as(i32, @bitCast(@as(c_int, @truncate(val.asInt64))));
}
pub inline fn JSVALUE_TO_FLOAT(arg_val: EncodedJSValue) f32 {
    const val = arg_val;
    return @as(f32, @floatCast(JSVALUE_TO_DOUBLE(val)));
}
pub inline fn JSVALUE_TO_DOUBLE(arg_val: EncodedJSValue) f64 {
    var val = arg_val;
    val.asInt64 -= comptime @as(c_longlong, 1) << @as(@import("std").math.Log2Int(c_longlong), @intCast(49));
    return val.asDouble;
}
pub inline fn JSVALUE_TO_BOOL(arg_val: EncodedJSValue) @"bool" {
    const val = arg_val;
    return val.asInt64 == @as(c_longlong, @bitCast(@as(c_longlong, (@as(c_int, 2) | @as(c_int, 4)) | @as(c_int, 1))));
}
